--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "dompurify": "^2.3.6",
     "esri-leaflet-geocoder": "^3.1.1",
     "leaflet": "^1.7.1",
     "prop-types": "^15.8.1",
