--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5",
     "react-leaflet-locate-control": "^0.1.6",
+    "react-loader-spinner": "^6.0.0-0",
     "react-material-ui-carousel": "^3.2.0",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
