--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-material-ui-carousel": "^3.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
