--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLOUDINARY_SERVER = ovol
 REACT_APP_CLOUDINARY_UPLOAD = ygji4scm
+REACT_APP_OPENWEATHER_API_KEY = c55152c32216e116eac808233ad4ec91
