--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
+    "@mui/styled-engine": "^5.4.4",
     "@mui/styled-engine-sc": "^5.4.2",
     "@mui/styles": "^5.4.4",
     "@mui/system": "^5.4.4",
@@ -30,6 +31,7 @@
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
