--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dompurify": "^2.3.6",
     "esri-leaflet-geocoder": "^3.1.1",
     "leaflet": "^1.7.1",
+    "leaflet.locatecontrol": "^0.76.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
